--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "TeamK",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "hbs": "^4.0.1"
   }
 }
